--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -123,10 +123,11 @@ spec:
               - *hostalert
     vmagent:
       enabled: true
-      podAnnotations:
-        vault.hashicorp.com/agent-inject: 'true'
-        vault.hashicorp.com/agent-inject-token: 'true'
-        vault.hashicorp.com/role: monitoring
+      podMetadata:
+        annotations:
+          vault.hashicorp.com/agent-inject: 'true'
+          vault.hashicorp.com/agent-inject-token: 'true'
+          vault.hashicorp.com/role: monitoring
       spec:
         inlineScrapeConfig: |
           - job_name: vault
