--- a/kubernetes/apps/k0s/ingress/nginx/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
       metrics:
         enabled: false
         serviceMonitor:
-          enabled: false
+          enabled: true
           namespace: ingress
           namespaceSelector:
             any: true
