--- a/kubernetes/apps/k0s/ingress/nginx/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
         proxy-buffer-size: 16k
         ssl-protocols: TLSv1.3 TLSv1.2
       metrics:
-        enabled: false
+        enabled: true
         serviceMonitor:
           enabled: true
           namespace: ingress
