--- a/kubernetes/apps/k8s/home-automation/home-assistant/database/kustomization.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/database/kustomization.yaml
@@ -8,3 +8,6 @@ resources:
   - ./cluster.yaml
   - ./scheduledbackup.yaml
   - ./podmonitor.yaml
+generatorOptions:
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
