--- a/kubernetes/apps/k8s/kube-system/tetragon/policies/rook-ceph.yaml
+++ b/kubernetes/apps/k8s/kube-system/tetragon/policies/rook-ceph.yaml
@@ -129,3 +129,36 @@ spec:
         - /usr/bin/sleep
         - /usr/bin/stat
     subsystem: raw_syscalls
+---
+apiVersion: cilium.io/v1alpha1
+kind: TracingPolicyNamespaced
+metadata:
+  name: rook-ceph-mds-ceph-filesystem
+  namespace: rook-ceph
+spec:
+  podSelector:
+    matchLabels:
+      app: rook-ceph-mds
+      rook_cluster: rook-ceph
+      rook_file_system: ceph-filesystem
+  tracepoints:
+  - args:
+    - index: 4
+      type: int64
+    event: sys_exit
+    selectors:
+    - matchActions:
+      - action: Sigkill
+      matchArgs:
+      - index: 4
+        operator: Equal
+        values:
+        - '59'
+        - '322'
+      matchBinaries:
+      - operator: NotIn
+        values:
+        - /usr/bin/env
+        - /usr/bin/ceph
+        - /usr/bin/sh
+    subsystem: raw_syscalls
