--- a/.taskfiles/cilium.yaml
+++ b/.taskfiles/cilium.yaml
@@ -13,3 +13,8 @@ tasks:
   tetragon-policy-builder:
     cmds:
       - docker run -p 5000:5000 -e KUBECONFIG=/tmp/kubeconfig -v ./.kubeconfigs/{{.ENVIRONMENT}}.kubeconfig:/tmp/kubeconfig ghcr.io/camptocamp/tetragon-policy-builder:master
+  tetragon-events:
+    cmds:
+      - kubectl --context {{.ENVIRONMENT}} logs --max-log-requests=6 -n kube-system -l app.kubernetes.io/name=tetragon -c export-stdout -f | tetra getevents -o compact --namespaces {{.namespace}}
+    vars:
+      namespace: '{{ or .namespace (fail "namespace `namespace` is required") }}'
