--- a/kubernetes/apps/k0s/monitoring/kustomization.yaml
+++ b/kubernetes/apps/k0s/monitoring/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./victoria-metrics/ks.yaml
+  - ./victoria-logs/ks.yaml
   - ./grafana/ks.yaml
