set as shared service

--- a/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -65,6 +65,9 @@ spec:
         # #       - vmselect.local
         # ingressClassName: nginx
         # pathType: Prefix
+      service:
+        annotations:
+          io.cilium/global-service: "true"
       terminationGracePeriodSeconds: 60
       serviceMonitor:      
         enabled: true
