--- a/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
       config:
         outputs: |
           [OUTPUT]
-              Name https
+              Name http
               Match kube.*
               Host vmlogs.logfold.com
               port 443
