--- a/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
           [OUTPUT]
               Name http
               Match kube.*
-              Host vmlogs.logfold.com
+              Host https://vmlogs.logfold.com
               port 443
               compress gzip
               uri /insert/jsonline?_stream_fields=stream,kubernetes_pod_name&_msg_field=log&_time_field=date
