--- a/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -59,7 +59,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: nginx
         hosts:
-          - &hoststorage vmlogs.${DOMAIN}
+          - name: &hoststorage vmlogs.${DOMAIN}
         tls:
           - hosts:
               - *hoststorage
