--- a/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -60,6 +60,7 @@ spec:
           kubernetes.io/ingress.class: nginx
         hosts:
           - name: &hoststorage vmlogs.${DOMAIN}
+            path: /
         tls:
           - hosts:
               - *hoststorage
