--- a/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -60,7 +60,7 @@ spec:
           kubernetes.io/ingress.class: nginx
         hosts:
           - name: &hoststorage vmlogs.${DOMAIN}
-            path: /
+            path: /select/vmui
         tls:
           - hosts:
               - *hoststorage
