--- a/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -58,6 +58,8 @@ spec:
         enabled: true
         annotations:
           kubernetes.io/ingress.class: nginx
+          nginx.ingress.kubernetes.io/rewrite-target: /
+          nginx.ingress.kubernetes.io/add-base-url : "true"
         hosts:
           - name: &hoststorage vmlogs.${DOMAIN}
             path: /select/vmui
