--- a/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -58,9 +58,10 @@ spec:
         enabled: true
         annotations:
           kubernetes.io/ingress.class: nginx
+          nginx.ingress.kubernetes.io/rewrite-target: /select/vmui/$1
         hosts:
           - name: &hoststorage vmlogs.${DOMAIN}
-            path: /
+            path: /(.*)
         tls:
           - hosts:
               - *hoststorage
