--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -15,6 +15,7 @@ dotenv: [".env"]
 includes:
   ansible: .taskfiles/ansible.yaml
   cilium: .taskfiles/cilium.yaml
+  cloudflare: .taskfiles/cloudflare.yaml
   db: .taskfiles/database.yaml
   secret: .taskfiles/externalsecrets.yaml
   flux: .taskfiles/flux.yaml
