--- a/kubernetes/apps/k8s/ingress/kustomization.yaml
+++ b/kubernetes/apps/k8s/ingress/kustomization.yaml
@@ -8,5 +8,6 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./certificates
+  #- ./cloudflared
   - ./synology
   - ./nginx/ks.yaml
