--- a/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
+++ b/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
@@ -1,14 +1,9 @@
 ---
+warp-routing:
+  enabled: true
 originRequest:
-  http2Origin: true
-
+  connectTimeout: 30s
 ingress:
-  - hostname: "${DOMAIN}"
-    service: https://nginx-ingress-controller.ingress.svc.cluster.local:443
-    originRequest:
-      originServerName: "external.${DOMAIN}"
-  - hostname: "*.${DOMAIN}"
-    service: https://nginx-ingress-controller.ingress.svc.cluster.local:443
-    originRequest:
-      originServerName: "external.${DOMAIN}"
+  - hostname: "home-assistant.${DOMAIN}"
+    service: http://home-assistant.home-automation.svc.cluster.local:8123
   - service: http_status:404
