--- a/kubernetes/apps/k8s/ingress/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/ingress/cloudflared/app/helmrelease.yaml
@@ -39,9 +39,9 @@ spec:
     env:
       NO_AUTOUPDATE: "true"
       TUNNEL_CRED_FILE: /etc/cloudflared/creds/credentials.json
-      # TUNNEL_METRICS: 0.0.0.0:8080
-      # TUNNEL_TRANSPORT_PROTOCOL: quic
-      # TUNNEL_POST_QUANTUM: true
+      TUNNEL_METRICS: 0.0.0.0:8080
+      TUNNEL_TRANSPORT_PROTOCOL: quic
+      TUNNEL_POST_QUANTUM: true
     args:
       - tunnel
       - --config
