--- a/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
+++ b/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
@@ -2,6 +2,7 @@
 warp-routing:
   enabled: true
 originRequest:
+  http2Origin: true
   connectTimeout: 30s
 ingress:
   - hostname: "home-assistant.${DOMAIN}"
