--- a/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
+++ b/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
@@ -4,7 +4,7 @@ warp-routing:
 originRequest:
   http2Origin: true
   connectTimeout: 30s
-   noTLSVerify: "true"
+  noTLSVerify: true
 ingress:
   - hostname: "home-assistant.${DOMAIN}"
     service: http://home-assistant.home-automation.svc.cluster.local:8123
