--- a/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
+++ b/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
@@ -4,8 +4,9 @@ warp-routing:
 originRequest:
   http2Origin: true
   connectTimeout: 30s
-  noTLSVerify: true
 ingress:
   - hostname: "home-assistant.${DOMAIN}"
-    service: https://home-assistant.home-automation.svc.cluster.local:8123
+    service: https://nginx-ingress-nginx-controller.ingress.svc.cluster.local:443
+    originRequest:
+      originServerName: external.${DOMAIN}
   - service: http_status:404
