--- a/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
+++ b/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
@@ -8,5 +8,5 @@ ingress:
   - hostname: "home-assistant.${DOMAIN}"
     service: https://nginx-ingress-nginx-controller.ingress.svc.cluster.local:443
     originRequest:
-      originServerName: external.${DOMAIN}
+      originServerName: hass.${DOMAIN}
   - service: http_status:404
