--- a/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
+++ b/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
@@ -5,6 +5,6 @@ originRequest:
   http2Origin: true
   connectTimeout: 30s
 ingress:
-  - hostname: hass.${DOMAIN}
+  - hostname: "*.${DOMAIN}"
     service: https://nginx-ingress-nginx-controller.ingress.svc.cluster.local:443
   - service: http_status:404
