--- a/kubernetes/apps/k8s/ingress/nginx/ks.yaml
+++ b/kubernetes/apps/k8s/ingress/nginx/ks.yaml
@@ -2,26 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-nginx-internal
+  name: cluster-apps-nginx
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/ingress/nginx/internal
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: home-kubernetes
-  wait: true
-  interval: 30m
-  retryInterval: 1m
-  timeout: 5m
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: cluster-apps-nginx-external
-  namespace: flux-system
-spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/ingress/nginx/external
+  path: ./kubernetes/apps/${ENVIRONMENT}/ingress/nginx/app
   prune: true
   sourceRef:
     kind: GitRepository
