--- a/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
+++ b/kubernetes/apps/k8s/ingress/cloudflared/app/config/config.yaml
@@ -7,6 +7,6 @@ originRequest:
 ingress:
   - hostname: "*.${DOMAIN}"
     service: https://nginx-ingress-nginx-controller.ingress.svc.cluster.local:443
-    # originRequest:
-    #   originServerName: external.${DOMAIN}
+    originRequest:
+      originServerName: external.${DOMAIN}
   - service: http_status:404
