--- a/kubernetes/apps/k8s/ingress/nginx/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/ingress/nginx/app/helmrelease.yaml
@@ -34,6 +34,7 @@ spec:
         externalTrafficPolicy: Cluster
       ingressClassResource:
         default: true
+      allowSnippetAnnotations: true
       config:
         client-body-buffer-size: 100M
         client-body-timeout: 120
