--- a/kubernetes/apps/k8s/media/immich/app/web/helmrelease.yaml
+++ b/kubernetes/apps/k8s/media/immich/app/web/helmrelease.yaml
@@ -44,8 +44,8 @@ spec:
           labelSelector:
             matchLabels:
               app.kubernetes.io/name: *app
-      nodeSelector:
-        node-role.kubernetes.io/worker: "true"
+      # nodeSelector:
+      #   node-role.kubernetes.io/worker: "true"
     controllers:
       main:
         annotations:
