add service annotation for victoria log

--- a/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -67,6 +67,9 @@ spec:
         ingressClassName: nginx
         pathType: Prefix
       terminationGracePeriodSeconds: 60
+      service:
+        annotations:
+          io.cilium/global-service: "true"
       serviceMonitor:      
         enabled: true
     fluent-bit:      
