--- a/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -72,3 +72,34 @@ spec:
               Operation lift
               Nested_under kubernetes
               Add_prefix   kubernetes_
+    extraObjects:
+      - apiVersion: v1
+        kind: Service
+        metadata:
+          name: victoria-logs-victoria-logs-single-server
+          namespace: monitoring
+          labels:
+            app: server
+            app.kubernetes.io/instance: victoria-logs
+            app.kubernetes.io/name: victoria-logs-single
+          annotations:
+            io.cilium/global-service: 'true'
+        spec:
+          ports:
+            - name: http
+              protocol: TCP
+              port: 9428
+              targetPort: http
+          selector:
+            app: server
+            app.kubernetes.io/instance: victoria-logs
+            app.kubernetes.io/name: victoria-logs-single
+          clusterIP: None
+          clusterIPs:
+            - None
+          type: ClusterIP
+          sessionAffinity: None
+          ipFamilies:
+            - IPv4
+          ipFamilyPolicy: SingleStack
+          internalTrafficPolicy: Cluster
