--- a/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -78,18 +78,11 @@ spec:
         metadata:
           name: victoria-logs-victoria-logs-single-server
           namespace: monitoring
-          labels:
-            app: server
-            app.kubernetes.io/instance: victoria-logs
-            app.kubernetes.io/name: victoria-logs-single
           annotations:
             io.cilium/global-service: 'true'
         spec:
           ports:
-            - name: http
-              protocol: TCP
-              port: 9428
-              targetPort: http
+            - port: 9428
           selector:
             app: server
             app.kubernetes.io/instance: victoria-logs
