--- a/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
           [OUTPUT]
               Name http
               Match kube.*
-              Host 10.32.0.132
+              Host {{ .Release.Name }}-victoria-logs-single-server
               port 9428
               compress gzip
               uri /insert/jsonline?_stream_fields=stream,kubernetes_pod_name&_msg_field=log&_time_field=date
