--- a/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -68,6 +68,7 @@ spec:
         pathType: Prefix
       terminationGracePeriodSeconds: 60
       service:
+        type: Loadbalancer
         annotations:
           service.isovalent.com/phantom: "true"
       serviceMonitor:      
