--- a/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-logs/app/helmrelease.yaml
@@ -68,7 +68,7 @@ spec:
         pathType: Prefix
       terminationGracePeriodSeconds: 60
       service:
-        type: Loadbalancer
+        type: LoadBalancer
         annotations:
           service.isovalent.com/phantom: "true"
       serviceMonitor:      
