--- a/kubernetes/apps/k8s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -98,7 +98,7 @@ spec:
       enabled: false
       spec:
         externalLabels:
-          cluster: ${ENVIRONMENT}
+          k8s-cluster: ${ENVIRONMENT}
         notifiers:
           - selector:
               namespaceSelector:
