--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -142,7 +142,7 @@ spec:
         replicaCount: 1
         scrapeInterval: 60s
         externalLabels:
-          cluster: ${ENVIRONMENT}
+          k8s-cluster: ${ENVIRONMENT}
       ingress:
         enabled: false
         ingressClassName: nginx
