add victoria metrics/custom grafana dashboards

--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -255,6 +255,8 @@ spec:
         datasources:
           enabled: false
         dashboards:
+          label:
+            grafana_dashboard: "1"
           multicluster: true
     prometheus-node-exporter:
       enabled: true
