--- a/kubernetes/apps/k0s/monitoring/grafana/app/kustomization.yaml
+++ b/kubernetes/apps/k0s/monitoring/grafana/app/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 resources:
+  - ./dashboards.yaml
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./ingress.yaml
