--- a/kubernetes/apps/k0s/monitoring/grafana/app/dashboards.yaml
+++ b/kubernetes/apps/k0s/monitoring/grafana/app/dashboards.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     grafana_dashboard: "1"
 data:
-  cloudnative-pg.json: |-
+  cloudnative-pg.json: |
     {
       "annotations": {
         "list": [
